# fitness_bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
bot/: .env.example  __main__.py  config.py
bot/config/: config.py  models.py
bot/locales/: i18n_stub_script.sh  stub.pyi
bot/locales/en/LC_MESSAGES/: txt.ftl
bot/locales/ru/LC_MESSAGES/: txt.ftl
bot/migrations/: env.py
bot/migrations/versions/: 151535cc2a1d_.py  21f2e8d106fa_.py  59f808a69e3a_.py  7b5b29ef30f5_.py
bot/src/: __init__.py  routers.py
bot/src/data_stores/cache/: __init__.py  cache.py  cache_keys.py
bot/src/data_stores/db/models/: __init__.py
bot/src/db/: __init__.py
bot/src/db/cache/: cache.py  cache_keys.py
bot/src/dialogs/: __init__.py  dialog_routers.py
bot/src/dialogs/admin_dialogs/: __init__.py  admin_dialog_routers.py
bot/src/dialogs/user_dialogs/: __init__.py  user_dialog_routers.py
bot/src/dialogs/user_dialogs/change_data/: __init__.py  dialogs.py  getters.py  (+1 more)
bot/src/filters/: __init__.py  user_parameter_filters.py
bot/src/handlers/: __init__.py  command_handlers.py  user_parameter_handlers.py
bot/src/menu/: __init__.py  menu.py
bot/src/middlewares/: __init__.py  cache.py  i18n.py
bot/src/services/: __init__.py  calories.py  static_data.py  timezone.py  user_cache.py  user_data_getters.py
bot/src/setters/: __init__.py  buttons_setter.py
bot/src/states/: states.py
bot/src/utils/: __init__.py  enums.py  i18n.py  nats_connect.py  user_cache.py
bot/storage/: nats_storage.py
nats-data/config/: server.conf
(+23 files in other folders)
